--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,13 @@
 			<version>${springframework.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
-	</dependencies>
+        <dependency>
+            <groupId>org.rebecalang</groupId>
+            <artifactId>modeltransformer</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+    </dependencies>
 
 
 	<profiles>
