--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,18 @@
             <artifactId>modeltransformer</artifactId>
             <version>1.9</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-testng</artifactId>
+            <version>0.5.2</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
