--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.rose-giant</groupId>
-	<artifactId>Hybrid-Rebeca-Model-Transformer</artifactId>
-	<version>1.0</version>
+	<groupId>org.rebecalang</groupId>
+	<artifactId>modeltransformer</artifactId>
+	<version>1.9</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -81,12 +81,6 @@
 			<artifactId>spring-test</artifactId>
 			<version>${springframework.version}</version>
 			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.github.rose-giant</groupId>
-			<artifactId>Hybrid-Rebeca-Model-Transformer</artifactId>
-			<version>1.0</version>
 		</dependency>
         <dependency>
             <groupId>junit</groupId>
